src/components/blog/sb-page-layout/sb-page-layout.css
:host {
  display: block;
  width: 100%;
  padding: 1rem 2rem;
  margin: 0 auto;
  font-family: "Fira Mono", monospace;
  color: var(--text);
  background-color: var(--background);
  box-sizing: border-box;
}

.grid {
  display: grid;
  grid-template-columns: 280px 1fr;
  gap: 2rem;
  margin-top: 2rem;
}

.sidebar,
.content {
  min-width: 0;
}

.content {
  display: flow-root;
}

.sidebar {
  margin-top: 3.2rem;
}

:host([no-sidebar]) .grid {
  grid-template-columns: 1fr;
}

:host([no-sidebar]) .sidebar {
  display: none;
}

@media (max-width: 768px) {
  .grid {
    grid-template-columns: 1fr;
  }
  .sidebar {
    display: none;
  }
}

